# rlogd

./: Makefile.am  configure.ac
lib/: Makefile.am
src/: Makefile.am
